--- a/Breathe/app/src/main/res/drawable/profile_icon.xml
+++ b/Breathe/app/src/main/res/drawable/profile_icon.xml
@@ -1,5 +1,101 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="1024dp"
-    android:height="1024dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="1024" android:viewportWidth="1024" android:width="24dp">
+      
+    <path android:fillColor="#D4E7DA" android:pathData="M404.8,539.6c2.6,-0 5.2,-0 7.7,-0 6.2,-0 12.4,-0 18.6,0 7.3,0 14.5,0 21.8,0 13,-0 26,0 39,0 12.5,0 25.1,0 37.6,0a32501.5,32501.5 0,0 1,45.6 0l2.2,0c5,0 10.1,0 15.1,0 6.8,-0 13.6,0 20.4,0 2.5,0 5,0 7.4,0 18.6,-0 37.1,0.4 55.2,5l3.2,0.8c19.6,5 37.1,13.4 55.1,22.4l2,1c1.7,1.3 3.3,2.7 5,4a619.4,619.4 0,0 0,5.1 3.7C751.9,580.9 757.5,585.4 763,590l2.2,1.8c4,3.4 7.6,7 11,11.1a111.8,111.8 0,0 0,3.6 4C790.1,617.9 797.9,630.9 805,644c0.6,1.1 1.2,2.1 1.8,3.2 17.9,33.9 21.6,70.7 22,108.4 0,2.2 0,4.4 0.1,6.7 0.2,16.8 0.4,33.7 -0.1,50.5l-0.1,3.9c-0.7,19.6 -6.4,37.4 -20,51.8 -9.3,8.6 -20.6,14.2 -32.9,17 -2,0.4 -2,0.4 -3.7,2.5v-2h-10l-1,2 -1.5,-0.5c-4.5,-0.9 -9.1,-0 -13.6,0.4 -3.8,0.2 -3.8,0.2 -7.1,-0.3 -3.8,-0.5 -7.5,-0.6 -11.4,-0.6l-2.1,-0c-1.5,0 -2.9,0 -4.4,0 -2.2,0 -4.5,0 -6.7,-0 -1.4,0 -2.8,0 -4.3,0l-3.9,0c-3,-0.1 -3,-0.1 -5.1,1.1 -4.2,0.1 -8.1,0 -12.2,-0.6 -3.4,-0.4 -5.6,-0.3 -8.8,0.6v-2a852.6,852.6 0,0 0,-4.3 0.4l-2.4,0.2c-2.4,0.3 -2.4,0.3 -5.3,1.3 -2.9,0 -5.3,-0.1 -8.1,-0.5 -5,-0.6 -10,-0.6 -15,-0.5 -9.9,0.1 -19.9,-0.2 -29.8,-0.5l-2.1,-0.1c-4,-0.1 -8,-0.3 -11.9,-0.4v2h-5v-1l-11,-1 -1,2 -1,-1 -3,1v-2h-3l-1,2v-2l-4,2v-2l-2.1,0c-17.3,0.1 -34.7,0.3 -52,0.4 -8.4,0.1 -16.8,0.1 -25.2,0.2 -72.2,0.5 -72.2,0.5 -106.7,0.4v1h-6v-1c-4.6,-0 -9.3,-0 -13.9,-0.1 -1.6,-0 -3.2,-0 -4.7,-0a2005.3,2005.3 0,0 0,-6.8 -0l-2.1,-0c-3.1,0 -5.4,0.1 -8.4,1.1v-2l-3.5,0.5c-4.1,0.5 -8.1,0.6 -12.2,0.7l-2.2,0c-2.4,0 -4.8,0 -7.2,0l-5,0c-3.5,0 -7,0 -10.6,0 -4.5,0 -8.9,0 -13.4,0 -3.5,0 -6.9,0 -10.4,0 -1.6,0 -3.3,0 -4.9,0 -22,0.1 -42.4,-2.7 -59.2,-18.4 -18.1,-19.1 -19.6,-42.7 -19.6,-67.5l-0,-5.9c-0,-4.1 0,-8.2 0,-12.3 0,-5.2 0,-10.4 -0,-15.6 -0,-4.1 -0,-8.1 0,-12.2 0,-1.9 0,-3.8 -0,-5.7 -0.1,-36.6 5.6,-73.2 23.2,-105.7a415.1,415.1 0,0 0,3.1 -5.9C230.2,622.7 241,609.4 253,597l2.5,-2.7C276.9,572 306.4,555.5 336,547h4l1,-2c2.3,-0.6 2.3,-0.6 5.3,-1l3.3,-0.5L353,543l2.9,-0.4c16.4,-2.4 32.4,-3 49,-2.9Z"/>
+      
+    <path android:fillColor="#D4E7D9" android:pathData="M536,136v1l1.9,0.3c38.7,7.3 71.7,23.3 101,49.7l1.6,1.4c1.2,1.1 2.4,2.3 3.6,3.5v2l3,1a111.1,111.1 0,0 1,5.1 6.2l1.5,1.9c1.5,2 3,3.9 4.5,5.9l1.3,1.7C675.2,231.7 685.9,255.4 692,281l0.5,2.3C697.9,307 696.2,333.4 691,357l-0.5,2.5c-6.6,29.4 -22.9,61.2 -44.9,82 -1.6,1.6 -3,3.2 -4.3,4.9L639,449h-2l-1,3c-2.4,2.6 -5.3,4.8 -8,7l-2.8,2.3C611.7,472.1 596.7,480.8 581,488l-3.6,1.6c-41.7,17.9 -89.9,15.9 -131.6,-0.4C429.9,482.8 415.7,474.3 402,464l-2.9,-2.2C368.9,438.3 345.4,403.8 335,367l-0.6,-1.9C321.4,318.4 329.2,271.1 352,229c6.5,-11.3 14.4,-21.3 23,-31 0.8,-0.9 1.5,-1.8 2.3,-2.7 13.7,-15.6 30.4,-28.2 48.5,-38.3 3.7,-1.9 3.7,-1.9 6.2,-5l2.4,-0.4c4.8,-0.8 9,-2.6 13.4,-4.4 8.9,-3.5 17.7,-6.4 27.1,-8.2l2.2,-0.4c19.3,-3.8 39.2,-2.8 58.8,-2.6Z"/>
+      
+    <path android:fillColor="#B5C6B7" android:pathData="m387.9,884 l4.8,0c18,0 36,0.1 54,0.2 4.8,0 9.5,0.1 14.3,0.1a230119.6,230119.6 0,0 0,57.4 0.3c20.9,0.1 41.8,0.2 62.7,0.4v2l2,1h-3v-2h-3l-1,2v-2l-4,2v-2l-2.1,0c-17.3,0.1 -34.7,0.3 -52,0.4 -8.4,0.1 -16.8,0.1 -25.2,0.2 -72.2,0.5 -72.2,0.5 -106.7,0.4v1h-6v-1c-4.6,-0 -9.3,-0 -13.9,-0.1 -1.6,-0 -3.2,-0 -4.7,-0a2005.3,2005.3 0,0 0,-6.8 -0l-2.1,-0c-3.1,0 -5.4,0.1 -8.4,1.1v-3c14.6,-0.7 29.2,-1.1 43.9,-1Z"/>
+      
+    <path android:fillColor="#A5B2A6" android:pathData="m725.4,883.9 l4,0c16.2,0 32.5,0 48.7,0.1l-1.9,0.9c-2.3,1.1 -2.3,1.1 -4.1,3.1v-2h-10l-1,2 -1.5,-0.5c-4.5,-0.9 -9.1,-0 -13.6,0.4 -3.8,0.2 -3.8,0.2 -7.1,-0.3 -3.8,-0.5 -7.5,-0.6 -11.4,-0.6l-2.1,-0c-1.5,0 -2.9,0 -4.4,0 -2.2,0 -4.5,0 -6.7,-0 -1.4,0 -2.8,0 -4.3,0l-3.9,0c-3,-0.1 -3,-0.1 -5.1,1.1 -4.2,0.1 -8.1,0 -12.2,-0.6 -3.4,-0.4 -5.6,-0.3 -8.8,0.6v-2a852.6,852.6 0,0 0,-4.3 0.4c-0.8,0.1 -1.6,0.2 -2.4,0.2 -2.4,0.3 -2.4,0.3 -5.3,1.3 -2.9,0 -5.3,-0.1 -8.1,-0.5 -5,-0.6 -10,-0.6 -15,-0.5 -9.9,0.1 -19.9,-0.2 -29.8,-0.5l-2.1,-0.1c-4,-0.1 -8,-0.3 -11.9,-0.4v2c-2.4,0.2 -2.4,0.2 -5,0l-2,-3a7129,7129 0,0 1,30.1 -0.5c33.8,-0.5 67.5,-0.5 101.3,-0.5Z"/>
+      
+    <path android:fillColor="#CBDDCE" android:pathData="M402.3,174.3 L404,175c-5.5,4.7 -5.5,4.7 -8.4,6.3 -3.2,2.1 -5.2,4.6 -7.6,7.5 -3.1,3.6 -6.5,6.9 -9.9,10.2 -0.8,-1.6 -0.8,-1.6 -1,-4a50,50 0,0 1,5.3 -5.7l1.6,-1.6A324.1,324.1 0,0 1,389 183l1.6,-1.5c8.5,-7.7 8.5,-7.7 11.7,-7.3Z"/>
+      
+    <path android:fillColor="#C9DBCB" android:pathData="M408,884v1l-2.3,0.1c-7.1,0.2 -14.3,0.4 -21.4,0.7 -3.7,0.1 -7.3,0.2 -11,0.3 -3.5,0.1 -7.1,0.2 -10.6,0.3 -2,0.1 -4,0.1 -6,0.2l-3.7,0.1 -3.3,0.1c-2.8,0.1 -2.8,0.1 -5.7,1.2v-3c21.3,-1 42.6,-1.1 64,-1Z"/>
+      
+    <path android:fillColor="#96A196" android:pathData="m778,884 l-1.9,0.9c-2.3,1.1 -2.3,1.1 -4.1,3.1v-2h-10l-1,2 -1.5,-0.5c-4.1,-0.8 -8.1,-0.1 -12.2,0.3 -1.8,0.2 -3.5,0.2 -5.3,0.2l-2,-2c3.5,-1 6.7,-1.2 10.3,-1.3l3.7,-0.1 3.9,-0.1 3.8,-0.1c5.4,-0.2 10.9,-0.3 16.3,-0.3Z"/>
+      
+    <path android:fillColor="#C4D5C5" android:pathData="M340,379c3,3.4 3.9,6.7 5,11h2a668.3,668.3 0,0 1,2.9 5.6l1.7,3.2c1.4,3.1 2,5.8 2.4,9.2 -2.7,-2.4 -4.1,-4.9 -5.7,-8.2l-1.5,-3.1 -1.5,-3.2 -1.5,-3.2C340,382.4 340,382.4 340,379Z"/>
+      
+    <path android:fillColor="#C6D7C9" android:pathData="M691,347h1c-0.5,9.8 -2.6,21.2 -7,30h-2l-1,2c1.1,-5.1 2.2,-10.1 4,-15h2l0.4,-3.4c0.6,-4.6 1.6,-9.1 2.6,-13.6Z"/>
+      
+    <path android:fillColor="#C2D2C4" android:pathData="M799,635c3.3,2.7 4.9,6.3 6.8,10.1l1,1.9c0.8,1.6 1.5,3.3 2.3,5l-1,2 -1.3,-2.8c-1.4,-3.1 -1.4,-3.1 -3.1,-4.6 -2.5,-2.5 -4,-5.3 -5.6,-8.6l1,-3Z"/>
+      
+    <path android:fillColor="#C4D6C7" android:pathData="M707,556c5.2,0.6 9.3,3.1 13.8,5.6l2.4,1.3A1115.2,1115.2 0,0 1,729 566c-2,1 -2,1 -4.4,0.2l-2.7,-1.2 -2.8,-1.2L717,563v-2l-2.8,-0.8c-3,-1.1 -4.9,-2.2 -7.3,-4.2Z"/>
+      
+    <path android:fillColor="#C0D2C2" android:pathData="M582,151c4.6,0.6 8.3,2.5 12.3,4.6l2,1c1.6,0.8 3.2,1.6 4.7,2.4 -4,1.3 -5.7,0.3 -9.6,-1.3l-3.5,-1.3C585,155 585,155 584,152l-2,-1Z"/>
+      
+    <path android:fillColor="#CDDED0" android:pathData="M272.3,581.3 L274,582c-3.1,3.4 -5.5,5.7 -10,7h-3c1.4,-1.4 2.8,-2.7 4.3,-4.1l2.4,-2.3C270,581 270,581 272.3,581.3Z"/>
+      
+    <path android:fillColor="#CBDDCE" android:pathData="M211,661c1.2,1.5 1.2,1.5 2,4 -0.7,2.8 -1.8,5.4 -3,8h-2l-1,2c0.6,-5.1 2.1,-9.3 4,-14Z"/>
+      
+    <path android:fillColor="#7E8980" android:pathData="M670,885c1.9,-0.1 3.9,-0.1 5.8,-0.1l3.3,-0.1C682,885 682,885 685,887l-5,1v-2l-9,1 -1,-2Z"/>
+      
+    <path android:fillColor="#A3B1A4" android:pathData="M344,885h16v1l-2.7,0.2 -3.6,0.3c-1.2,0.1 -2.3,0.2 -3.5,0.2 -3.2,0.2 -3.2,0.2 -6.1,1.3v-3Z"/>
+      
+    <path android:fillColor="#BACBBC" android:pathData="M199,703h1l1,10h-2l-1,4 1,-14Z"/>
+      
+    <path android:fillColor="#AEBEAF" android:pathData="m778,884 l-1.9,0.9c-2.3,1.1 -2.3,1.1 -4.1,3.1v-2h-8v-1c4.7,-0.7 9.2,-1.1 14,-1Z"/>
+      
+    <path android:fillColor="#C8DCCC" android:pathData="M602,477c-6.8,4 -6.8,4 -9,4l1,-3c5.4,-2.3 5.4,-2.3 8,-1Z"/>
+      
+    <path android:fillColor="#BECFBF" android:pathData="m672,402 l1,2c-1,1.9 -1,1.9 -2.4,4.1l-1.4,2.2L668,412l-1,-2c0.9,-2.6 0.9,-2.6 2,-5h2l1,-3Z"/>
+      
+    <path android:fillColor="#C4D6C6" android:pathData="m820,849 l1,2c-0.8,1.7 -0.8,1.7 -1.9,3.6L817,858l-2,-3 3,-1v-4l2,-1Z"/>
+      
+    <path android:fillColor="#C9DACC" android:pathData="M582,151c3.8,0.5 6.1,1.5 9,4h-6l-1,-3 -2,-1Z"/>
+      
+    <path android:fillColor="#444" android:pathData="M604,887h5v1h-5v-1Z"/>
+      
+    <path android:fillColor="#333" android:pathData="M434,887h5v1h-5v-1Z"/>
+      
+    <path android:fillColor="#2A2A2A" android:pathData="m588,887 l3,1ZM412,887l3,1ZM388,887l3,1Z"/>
+      
+    <path android:fillColor="#6A6A6A" android:pathData="m376,887 l3,1Z"/>
+      
+    <path android:fillColor="#636363" android:pathData="m372,887 l3,1Z"/>
+      
+    <path android:fillColor="#8E8E8E" android:pathData="m364,887 l3,1Z"/>
+      
+    <path android:fillColor="#787878" android:pathData="m356,887 l3,1Z"/>
+      
+    <path android:fillColor="#2A2A2A" android:pathData="m433,485 l3,1Z"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="m537,136 l3,1ZM685,887l2,1ZM677,887l2,1ZM645,887l2,1Z"/>
+      
+    <path android:fillColor="#404040" android:pathData="m637,887 l2,1ZM628,887l2,1ZM620,887l2,1ZM592,887l2,1Z"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="m564,887 l2,1ZM540,887l2,1ZM524,887l2,1ZM492,887l2,1Z"/>
+      
+    <path android:fillColor="#404040" android:pathData="m484,887 l2,1Z"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="m452,887 l2,1ZM420,887l2,1ZM416,887l2,1Z"/>
+      
+    <path android:fillColor="#404040" android:pathData="m408,887 l2,1Z"/>
+      
+    <path android:fillColor="#555" android:pathData="m400,887 l2,1Z"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="m396,887 l2,1Z"/>
+      
+    <path android:fillColor="#404040" android:pathData="m360,887 l2,1Z"/>
+      
+    <path android:fillColor="#808080" android:pathData="m352,887 l2,1Z"/>
+      
+    <path android:fillColor="#555" android:pathData="m348,887 l2,1Z"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="m340,887 l2,1Z"/>
+      
+    <path android:fillColor="#404040" android:pathData="m332,887 l2,1Z"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="m251,887 l2,1ZM264,584l2,1ZM274,576l2,1Z"/>
+      
+    <path android:fillColor="#404040" android:pathData="m678,544 l2,1Z"/>
+      
+    <path android:fillColor="#555" android:pathData="m508,503 l2,1Z"/>
+      
+    <path android:fillColor="#404040" android:pathData="m602,477 l2,1Z"/>
+      
+    <path android:fillColor="#B4B4B4" android:pathData="m417,160 l2,1Z"/>
+      
+    <path android:fillColor="#FF000000" android:pathData="m472,138 l2,1Z"/>
+    
+</vector>
